--- a/Stock_Price_Prediction.ipynb
+++ b/Stock_Price_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Stock Price Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMXiItt3CNAlbbgCPSXFwKT",
+      "authorship_tag": "ABX9TyPjgImbgHsEyRlJSRfk5aFR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,7 +204,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 428
+          "height": 621
         },
         "outputId": "6a2a1048-a2a4-4bab-f79f-9318002f7f0b"
       },
@@ -255,7 +255,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 430
+          "height": 621
         },
         "outputId": "a1a133ad-bd31-4706-e531-bfc980012c89"
       },
@@ -317,7 +317,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 428
+          "height": 500
         },
         "outputId": "3c528192-e70d-44ae-d66e-5bd7690eee01"
       },
@@ -482,6 +482,26 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3QbcL1n7PU87",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Data Structure Creation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ptx6d9J_PSEz",
+        "colab_type": "text"
+      },
+      "source": [
+        "A special data structure is needed to cover 60-time stamps, based on which RNN will predict the 61st price. Here the number of past timestamps is set to 60 based on experimentation. Thus, X_train is a nested list, which contains lists of 60 time-stamp prices. y_train is a list of stock prices which is the next day stock price, corresponding to each list in X_train."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iSLgdvX7uhGb",
@@ -524,6 +544,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zGnyjxeNPmC6",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Building the Model\n",
+        "\n",
+        "We are building a NN regressor for continuous value prediction using LSTM. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DqQ-An9mJKyO",
@@ -555,6 +587,16 @@
       ],
       "execution_count": 79,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FUQAjol8QAwf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let’s compile the RNN by choosing an SGD algorithm and a loss function. For optimizer, we use Adam. The loss function is the mean of squared errors between actual values and predictions."
+      ]
     },
     {
       "cell_type": "code",
@@ -649,7 +691,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 566
+          "height": 728
         },
         "outputId": "8176cabd-6214-4b4c-945f-615384aac1c2"
       },
@@ -799,7 +841,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "outputId": "226f9cb5-ce0d-40d3-ff32-d7f34957913e"
       },
@@ -824,7 +866,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "outputId": "057334fc-fdec-4921-aa0e-bf78bf6735c0"
       },
@@ -878,6 +920,16 @@
       ],
       "execution_count": 89,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3x0DOHyNQtAI",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Load Test Data"
+      ]
     },
     {
       "cell_type": "code",
